fix: equipe layout bug

--- a/src/components/Arrow/Arrow.css
+++ b/src/components/Arrow/Arrow.css
@@ -15,12 +15,13 @@
 .conteiner{
   display: flex;
   flex-direction: row;
-  justify-self: center;
+  justify-content: center;
 }
 
 .CollapsibleTriggerContainer {
   display: flex;
   cursor: pointer;
+  justify-self: center;
 }
 
 .collapsible-arrow{
